test/fail/Issue1609d.agda
-- Andreas, 2015-07-13  Better parse errors for illegal type signatures

A with B : Set
